# vocotype-rs

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
assets/: app-icon.icns
crates/iflytek-core/: Cargo.toml
crates/iflytek-core/data/: README.md
crates/iflytek-core/src/: attention.rs  beam.rs  frontend.rs  lib.rs  numerics.rs  ops.rs  postprocess.rs  postprocess_english.rs  postprocess_models.rs  postprocess_numeric.rs  postprocess_tables.rs  postprocess_types.rs  tensor.rs  vad_endpoint.rs
crates/iflytek-core/src/ops/: accelerate.rs  decoder_gemm.rs  neon.rs
crates/iflytek-core/test-data/: README.md
crates/iflytek-ops/: Cargo.toml
crates/iflytek-ops/src/: lib.rs
crates/iflytek-runtime/: Cargo.toml
crates/iflytek-runtime/src/: decoder.rs  encoder.rs  lib.rs  recognizer.rs  streaming.rs  tensor.rs  token_timing.rs  vad.rs
docs/: asr-backends.md  config.md  initial-plan.md  todo.md
scripts/: build-macos-icon.sh  package-macos-app.sh
src/: app.rs  asr.rs  asr_backend.rs  audio.rs  cli.rs  config.rs  daemon.rs  dataset.rs  dict.rs  hotkey.rs  inject.rs  logging.rs  main.rs  models.rs  overlay.rs  punctuation.rs  vad.rs  wav.rs
src/daemon/: mod.rs  runtime.rs  segments.rs  state.rs  streaming.rs  worker.rs
src/models/: archive.rs  checksum.rs  discovery.rs  doctor.rs  download.rs  manifest.rs  mod.rs  progress.rs  tests.rs
src/overlay/: app.rs  fonts.rs  mod.rs  state.rs
src/overlay/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/subtitle/: mod.rs  srt.rs  text.rs  transcribe.rs
src/vad/: audio.rs  backend.rs  config.rs  mod.rs  segment.rs  segmenter.rs  tests.rs
