[package]
name = "vocotype-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vocotype"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3"
bzip2 = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
cpal = "0.15"
crossbeam-channel = "0.5"
directories = "5"
eframe = "0.29"
egui = "0.29"
enigo = "0.1"
futures-util = "0.3"
global-hotkey = "0.6"
hound = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sherpa-onnx = "1.13.3"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-indicatif = "0.3"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "fmt", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
