[package]
name = "vocotype-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vocotype"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3"
bzip2 = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4.6"
cpal = "0.18"
crossbeam-channel = "0.5"
directories = "6"
eframe = "0.35"
egui = "0.35"
enigo = "0.6"
futures-util = "0.3"
global-hotkey = "0.8"
hound = "3"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
sherpa-onnx = "1.13.3"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-indicatif = "0.3"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "fmt", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSScreen", "NSView", "NSWindow"] }
objc2-core-graphics = { version = "0.3", features = ["CGDirectDisplay"] }
raw-window-handle = "0.6"
winit = "0.30"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["randr"] }
